@@ -55,8 +55,11 @@ import static com.openexchange.imap.utils.IMAPStorageUtility.getFetchProfile;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
+import java.util.TreeSet;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -573,6 +576,80 @@ public final class IMAPCommandsCollection {
 		}
 	}
 
+	private static final String FETCH_FLAGS = "FETCH 1:* (FLAGS UID)";
+
+	private static final Pattern PATTERN_UID = Pattern.compile("uid\\s([0-9]+)");
+
+	/**
+	 * Gets all messages marked as deleted in given IMAP folder
+	 * 
+	 * @param imapFolder
+	 *            The IMAP folder
+	 * @param filter
+	 *            The filter whose elements are going to be removed from return
+	 *            value
+	 * @return All messages marked as deleted in given IMAP folder filtered by
+	 *         specified <code>filter</code>
+	 * @throws ProtocolException
+	 *             If a protocol error occurs
+	 */
+	public static long[] getDeletedMessages(final IMAPFolder imapFolder, final long[] filter)
+			throws ProtocolException {
+		final IMAPProtocol p = imapFolder.getProtocol();
+		final Response[] r = p.command(FETCH_FLAGS, null);
+		final Response response = r[r.length - 1];
+		try {
+			if (response.isOK()) {
+				final Set<Long> set = new TreeSet<Long>();
+				for (int i = 0, len = r.length - 1; i < len; i++) {
+					if (!(r[i] instanceof IMAPResponse)) {
+						continue;
+					}
+					final IMAPResponse ir = (IMAPResponse) r[i];
+					String rest = null;
+					if (ir.keyEquals("FETCH") && (rest = ir.toString().toLowerCase()).indexOf("\\deleted") != -1) {
+						final Matcher m = PATTERN_UID.matcher(rest);
+						if (m.find()) {
+							set.add(Long.valueOf(m.group(1)));
+						}
+					}
+					r[i] = null;
+				}
+				if (filter != null && filter.length > 0) {
+					final Set<Long> tmp = new HashSet<Long>();
+					for (int i = 0; i < filter.length; i++) {
+						tmp.add(Long.valueOf(filter[i]));
+					}
+					set.removeAll(tmp);
+				}
+				final long[] retval = new long[set.size()];
+				int i = 0;
+				for (Long l : set) {
+					retval[i++] = l.longValue();
+				}
+				return retval;
+			}
+			throw new ProtocolException("FETCH command failed");
+		} finally {
+			/*
+			 * No invocation of notifyResponseHandlers() to avoid sequential (by
+			 * message) folder cache update
+			 */
+			/* p.notifyResponseHandlers(r); */
+			try {
+				p.handleResult(response);
+			} catch (final CommandFailedException cfe) {
+				if (cfe.getMessage().indexOf(ERR_01) != -1) {
+					/*
+					 * Obviously this folder is empty
+					 */
+					return new long[0];
+				}
+				throw cfe;
+			}
+		}
+	}
+
 	private static final String TEMPL_UID_EXPUNGE = "UID EXPUNGE %s";
 
 	/**
@@ -634,7 +711,8 @@ public final class IMAPCommandsCollection {
 		return true;
 	}
 
-	private static final Pattern PATTERN_PERMANENTFLAGS = Pattern.compile("(\\[PERMANENTFLAGS\\s\\()([^\\)\\]]*)(\\)\\]\\s*)");
+	private static final Pattern PATTERN_PERMANENTFLAGS = Pattern
+			.compile("(\\[PERMANENTFLAGS\\s\\()([^\\)\\]]*)(\\)\\]\\s*)");
 
 	private static final Pattern PATTERN_USER_FLAG = Pattern.compile("(?:\\\\\\*|(?:(^|\\s)([^\\\\]\\S+)($|\\s)))");
 
@@ -646,7 +724,8 @@ public final class IMAPCommandsCollection {
 	 *            The IMAP folder to check
 	 * @return <code>true</code> if user flags are supported; otherwise
 	 *         <code>false</code>
-	 * @throws MessagingException If SELECT command fails
+	 * @throws MessagingException
+	 *             If SELECT command fails
 	 */
 	public static boolean supportsUserDefinedFlags(final IMAPFolder imapFolder) throws MessagingException {
 		final Boolean val = (Boolean) imapFolder.doCommand(new IMAPFolder.ProtocolCommand() {
@@ -686,7 +765,7 @@ public final class IMAPCommandsCollection {
 		});
 		return val.booleanValue();
 	}
-	
+
 	private static final Pattern PATTERN_QUOTE_ARG = Pattern.compile("[\\s\\*%\\(\\)\\{\\}\"\\\\]");
 
 	private static final Pattern PATTERN_ESCAPE_ARG = Pattern.compile("[\"\\\\]");
@@ -705,7 +784,8 @@ public final class IMAPCommandsCollection {
 	 * method. Afterwards encoded string is checked if it needs quoting and
 	 * escaping of the special characters '"' and '\'.
 	 * 
-	 * @param fullname The folder fullname
+	 * @param fullname
+	 *            The folder fullname
 	 * @return Prepared fullname ready for being used in raw IMAP commands
 	 */
 	public static String prepareStringArgument(final String fullname) {
